<resources>
	<string name="betterheadsup_title">Better heads-up</string>
	<string name="betterheadsup_summ">Display any cancelable notification in a horizontally scrollable heads-up</string>
	<string name="mods">Mods</string>
	<string name="systemui_mods">Interface mods</string>
	<string name="sense_theme_color_header">Header</string>
	<string name="sense_theme_color_controls">Controls</string>
	<string name="sense_theme_color_bf">BlinkFeed</string>
	<string name="cleanbeam_mods">Statusbar icons</string>
	<string name="sense_mods">Sense mods</string>
	<string name="message_mods">Messaging mods</string>
	<string name="controls_mods">Controls mods</string>
	<string name="seekbar_mod_enable">Enable mod</string>
	<string name="various_mods">Various mods</string>
	<string name="various_mods_screenanim">Screen animations</string>
	<string name="various_popupnotify_title">Popup notifications</string>
	<string name="various_popupnotify_summ">Display cancelable notifications in a horizontally scrollable popup</string>
	<string name="various_betterheadsup_priority_title">Low and minimum priority</string>
	<string name="various_betterheadsup_priority_summ">Display heads-ups for notifications with priority lower than default.</string>
	<string name="various_betterheadsup_expand_title">Expand</string>
	<string name="various_betterheadsup_expand_summ">Always show expanded notification view in portrait mode. Landscape orientation will still force compact view.</string>
	<string name="various_betterheadsup_fullscreen_title">Respect fullscreen</string>
	<string name="various_betterheadsup_fullscreen_summ">Do not show heads-ups when fullscreen app is active (does not apply to immersive apps with hidden status and navigation bars).</string>
	<string name="various_betterheadsup_lightup_title">Wake screen</string>
	<string name="various_betterheadsup_lightup_summ">Force screen light up on every heads-up.</string>
	<string name="various_betterheadsup_sleepmode_title">Unobtrusive mode</string>
	<string name="various_betterheadsup_sleepmode_summ">Display new heads-ups only if screen is off.</string>
	<string name="various_popupnotify_bwlist_title">Inverse filter</string>
	<string name="various_popupnotify_bwlist_summ">Apps are blacklisted by default, turn this option on to whitelist them instead.</string>
	<string name="various_betterheadsup_bwlist_black_title">Blacklist</string>
	<string name="various_betterheadsup_bwlist_black_summ">All cancelable notifications will be shown in heads-ups except those from selected apps. You can quickly blacklist app by long pressing Dismiss button in heads-up window.</string>
	<string name="various_extremepower_title">EPS apps remap</string>
	<string name="various_extremepower_summ">Choose 6 custom apps for extreme power saving mode.</string>
	<string name="various_fleetingglance_title">Fleeting glance</string>
	<string name="various_fleetingglance_summ">Check notifications without touching the screen.</string>
	<string name="various_touchlock_title">Touch lock</string>
	<string name="various_touchlock_summ">Lock device until proper sequence of taps is performed</string>
	<string name="various_screenon_title">On animation</string>
	<string name="various_screenon_summ">Animation for turning screen on</string>
	<string name="various_screenoff_title">Off animation</string>
	<string name="various_screenoff_summ">Animation for turning screen off</string>
	<string name="various_screenanim_duration_title">Animation duration</string>
	<string name="various_screenanim_duration_summ">Configure animation length</string>
	<string name="various_screenanim_desc">0 value will disable animations</string>
	<string name="various_apm_title">APM</string>
	<string name="various_apm_summ">Enable or disable Advanced Power Menu\nIf you have the native APM installed, better keep this disabled.</string>
	<string name="various_scron_title">Enable \'Stay awake\'</string>
	<string name="various_scron_summ">Show the \'Stay awake\' setting in developer options.</string>
	<string name="various_apps_title">Show additional app details</string>
	<string name="various_apps_summ">Add new fields to Settings > Apps:\n- button to launch an app\n- apk filename and path\n- data path\n- process name\n- user id\n- target SDK version</string>
	<string name="various_mods_lockscreen">HTC Lock Screen</string>
	<string name="various_mods_toasts">Toasts</string>
	<string name="various_mods_notifications">Notifications</string>
	<string name="various_mods_calls">Calls</string>
	<string name="various_largephoto_title">Caller photo</string>
	<string name="various_largephoto_summ">Change the size of the photo displayed during incoming and outgoing calls.</string>
	<string name="various_rejectedcall_title">Disable rejected call reminder</string>
	<string name="various_rejectedcall_summ">Don\'t show missed call notification for manually rejected incoming calls. They will be added to call history as normal finished calls.</string>
	<string name="various_mods_volume">Volume</string>
	<string name="various_volsnd_title">Disable volume change sound</string>
	<string name="various_volsnd_summ">Check to disable the sound on volume change.</string>
	<string name="various_volsafe_title">Disable safe volume warning</string>
	<string name="various_volsafe_summ">Turn off a confirmation dialog when volume is raised above recommended level in headphones.</string>
	<string name="various_movevol_title">Volume dialog position</string>
	<string name="various_movevol_summ">Make volume dialog bottom aligned so it won\'t block the view.</string>
	<string name="various_mtpnotif_title">Hide MTP notification</string>
	<string name="various_mtpnotif_summ">Make MTP service background and disable notification.</string>
	<string name="various_dndnotif_title">Hide DND notification</string>
	<string name="various_dndnotif_summ">Disable Do Not Disturb notification.</string>
	<string name="various_powersavenotif_title">Hide Power Saver notification</string>
	<string name="various_powersavenotif_summ">Disable Power Saver notification.</string>
	<string name="various_imenotif_title">Hide Input Method notification</string>
	<string name="various_imenotif_summ">Disable Input Method notification.</string>
	<string name="various_vzwnotif_title">Hide Wi-Fi notifications</string>
	<string name="various_vzwnotif_summ">Disable Wi-Fi notifications on Verizon devices.</string>
	<string name="various_fastunlock_title">Fast unlock</string>
	<string name="various_fastunlock_summ">Unlock device as soon as correct PIN or password are entered.</string>
	<string name="various_ytwatermark_title">YouTube channel watermark</string>
	<string name="various_ytwatermark_summ">Hide channel logo overlay on videos in YouTube app.</string>
	<string name="various_psscrolltotop_title">Play Store fast scroll to top</string>
	<string name="various_psscrolltotop_summ">Tap status bar while in Google Play Store to scroll current page to top. Mod is not guaranteed to work with Play Store of version below 5.0.</string>
	<string name="various_contactsnocorner_title">Contacts photo frame</string>
	<string name="various_contactsnocorner_summ">Remove a frame with bottom right corner from contacts\' photos.</string>
	<string name="various_oldtoasts_title">Sense 6 styled toasts</string>
	<string name="various_oldtoasts_summ">Make toasts darker with smaller rounded corners radius.</string>
	<string name="various_iconlabletoasts_title">Enhanced toasts</string>
	<string name="various_iconlabletoasts_summ">Add application\'s icon and label to its toasts.</string>
	<string name="various_securelock_title">Enhanced screen lock</string>
	<string name="various_securelock_summ">Disable power menu and hardware reset notification while screen lock is active.</string>
	<string name="various_secureeqs_title">Restrict EQS</string>
	<string name="various_secureeqs_summ">Disable quick settings drawer on secure lock screen.</string>
	<string name="various_scramblepin_title">Scramble PIN</string>
	<string name="various_scramblepin_summ">Randomly change PIN buttons order to improve security.</string>
	<string name="various_keyslight_title">Hardware buttons backlight</string>
	<string name="various_keyslight_summ">Change backlight brightness for buttons.</string>
	<string name="various_keyslight_auto_title">Dynamic backlight</string>
	<string name="various_keyslight_auto_summ">Turn off buttons backlight in fullscreen apps.</string>
	<string name="various_musicchannel_title">HTC Music Channel</string>
	<string name="various_musicchannel_summ">Enable HTC music visualizations to be available for any audio player. Launch it from notification while music is playing. Notification visibility can be quickly toggled from Settings.</string>
	<string name="various_noautocorrect_title">No autocorrect</string>
	<string name="various_noautocorrect_summ">Disable autocorrect while keeping word prediction enabled.</string>
	<string name="various_noautoime_title">No auto soft input</string>
	<string name="various_noautoime_summ">Show keyboard only if you requested it.</string>
	<string name="various_allrotations_title">All rotations</string>
	<string name="various_allrotations_summ">Allow 180 degree orientation additionally to stock 90 and 270.</string>
	<string name="various_nolowbattwarn_title">Disable low battery warning</string>
	<string name="various_nolowbattwarn_summ">Turn off low battery popup dialog and sound tone.</string>
	<string name="various_nochargerwarn_title">Disable slow charge warning</string>
	<string name="various_nochargerwarn_summ">Turn off slow charging notification.</string>
	<string name="various_ledoncharge_title">LED during charge</string>
	<string name="various_ledoncharge_summ">Enable LED notifications while device is charging.</string>
	<string name="various_ledtimeout_title">LED timeout</string>
	<string name="various_ledtimeout_summ">Set the time LED will blink after notification is received.</string>
	<string name="various_screendelete_title">Screenshot deletion</string>
	<string name="various_screendelete_summ">Add Delete action to the screenshot notification.</string>
	<string name="various_screenopen_title">Select app to view screenshots</string>
	<string name="various_screenopen_summ">Change screenshot notification to use viewer app selection dialog.</string>
	<string name="wakegestures_mod">Wake gestures</string>
	<string name="persistent_mods">Always active mods</string>
	<string name="toolbox">Toolbox settings</string>
	<string name="toolbox_show_icon_title">Fast access icon</string>
	<string name="toolbox_show_icon_summ">Show Toolbox icon in Settings.</string>
	<string name="toolbox_l10n_title">Localization</string>
	<string name="toolbox_l10n_summ">Download and update language pack.</string>
	<string name="troubleshoot">Troubleshooting</string>
	<string name="toolbox_acrasend_title">Send detailed report</string>
	<string name="toolbox_acrasend_summ">Collect device and environment info, logcat and Xposed log, and send them to developer.\nInternet connection is required.</string>
	<string name="toolbox_acramail_title">Feedback</string>
	<string name="toolbox_acramail_summ">Enter your contact information and it will be included in detailed and crash reports.</string>
	<string name="support">Support</string>
	<string name="support_s6t_title">Sense Toolbox Site</string>
	<string name="support_s6t_summ">Find infos and changelog for the app here.</string>
	<string name="support_bug_title">Report a bug</string>
	<string name="support_bug_summ">Send us a bug report or a feature request via official issue tracker.</string>
	<string name="support_donate_title">Donate</string>
	<string name="support_donate_summ">Best way to express your gratitude for this awesome module :)</string>
	<string name="support_blog_title">Android Revolution HD Blog</string>
	<string name="support_blog_summ">Get the latest news and updates for your favorite ROM here.</string>
</resources>