<com.htc.preference.HtcPreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:toolbox="http://schemas.android.com/apk/res/com.sensetoolbox.six"
	android:key="pref_key_other">
		<com.htc.preference.HtcPreference
			android:key="pref_key_other_fleetingglance"
			android:title="@string/various_fleetingglance_title"
			android:summary="@string/various_fleetingglance_summ" />
		<com.htc.preference.HtcPreference
			android:key="pref_key_other_extremepower"
			android:title="@string/various_extremepower_title"
			android:summary="@string/various_extremepower_summ" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_apm"
			android:summary="@string/various_apm_summ"
			android:title="@string/various_apm_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_keepscreenon"
			android:summary="@string/various_scron_summ"
			android:title="@string/various_scron_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_appdetails"
			android:summary="@string/various_apps_summ"
			android:title="@string/various_apps_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_ytwatermark"
			android:summary="@string/various_ytwatermark_summ"
			android:title="@string/various_ytwatermark_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_psscrolltotop"
			android:summary="@string/various_psscrolltotop_summ"
			android:title="@string/various_psscrolltotop_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_contactsnocorner"
			android:summary="@string/various_contactsnocorner_summ"
			android:title="@string/various_contactsnocorner_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_allrotations"
			android:summary="@string/various_allrotations_summ"
			android:title="@string/various_allrotations_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcListPreference
			android:key="pref_key_other_keyslight"
			android:summary="@string/various_keyslight_summ"
			android:title="@string/various_keyslight_title"
			android:entries="@array/various_keyslight"
			android:entryValues="@array/various_keyslight_val"
			android:defaultValue="1"/>
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_keyslight_auto"
			android:summary="@string/various_keyslight_auto_summ"
			android:title="@string/various_keyslight_auto_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_musicchannel"
			android:summary="@string/various_musicchannel_summ"
			android:title="@string/various_musicchannel_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_noautocorrect"
			android:summary="@string/various_noautocorrect_summ"
			android:title="@string/various_noautocorrect_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_noautoime"
			android:summary="@string/various_noautoime_summ"
			android:title="@string/various_noautoime_title"
			android:defaultValue="false" />
		
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_lockscreen"
			android:key="pref_various_mods_lockscreen" >
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_securelock"
			android:summary="@string/various_securelock_summ"
			android:title="@string/various_securelock_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_fastunlock"
			android:summary="@string/various_fastunlock_summ"
			android:title="@string/various_fastunlock_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_secureeqs"
			android:summary="@string/various_secureeqs_summ"
			android:title="@string/various_secureeqs_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_scramblepin"
			android:summary="@string/various_scramblepin_summ"
			android:title="@string/various_scramblepin_title"
			android:defaultValue="false" />
		</com.htc.preference.HtcPreferenceCategory>
		
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_toasts" >
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_oldtoasts"
			android:summary="@string/various_oldtoasts_summ"
			android:title="@string/various_oldtoasts_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcListPreference
			android:key="pref_key_other_iconlabletoasts"
			android:summary="@string/various_iconlabletoasts_summ"
			android:title="@string/various_iconlabletoasts_title"
			android:entries="@array/various_iconlabletoasts"
			android:entryValues="@array/various_iconlabletoasts_val"
			android:defaultValue="1"/>
		</com.htc.preference.HtcPreferenceCategory>
		
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_notifications"
			android:key="pref_various_mods_notifications" >
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_mtpnotif"
			android:summary="@string/various_mtpnotif_summ"
			android:title="@string/various_mtpnotif_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_dndnotif"
			android:summary="@string/various_dndnotif_summ"
			android:title="@string/various_dndnotif_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_powersavenotif"
			android:summary="@string/various_powersavenotif_summ"
			android:title="@string/various_powersavenotif_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_imenotif"
			android:summary="@string/various_imenotif_summ"
			android:title="@string/various_imenotif_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_vzwnotif"
			android:summary="@string/various_vzwnotif_summ"
			android:title="@string/various_vzwnotif_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_nolowbattwarn"
			android:summary="@string/various_nolowbattwarn_summ"
			android:title="@string/various_nolowbattwarn_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_nochargerwarn"
			android:summary="@string/various_nochargerwarn_summ"
			android:title="@string/various_nochargerwarn_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_ledoncharge"
			android:summary="@string/various_ledoncharge_summ"
			android:title="@string/various_ledoncharge_title"
			android:defaultValue="false" />
		<com.sensetoolbox.six.utils.LEDTimePicker
			android:key="pref_key_other_ledtimeout"
			android:summary="@string/various_ledtimeout_summ"
			android:title="@string/various_ledtimeout_title" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_screendelete"
			android:summary="@string/various_screendelete_summ"
			android:title="@string/various_screendelete_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_screenopen"
			android:summary="@string/various_screenopen_summ"
			android:title="@string/various_screenopen_title"
			android:defaultValue="false" />
		</com.htc.preference.HtcPreferenceCategory>
		
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_calls" >
		<com.htc.preference.HtcListPreference
			android:key="pref_key_other_largephoto"
			android:summary="@string/various_largephoto_summ"
			android:title="@string/various_largephoto_title"
			android:entries="@array/various_largephoto"
			android:entryValues="@array/various_largephoto_val"
			android:defaultValue="1"/>
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_rejectedcall"
			android:summary="@string/various_rejectedcall_summ"
			android:title="@string/various_rejectedcall_title"
			android:defaultValue="false" />
		</com.htc.preference.HtcPreferenceCategory>
			
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_volume" >
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_volsound"
			android:summary="@string/various_volsnd_summ"
			android:title="@string/various_volsnd_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_volsafe"
			android:summary="@string/various_volsafe_summ"
			android:title="@string/various_volsafe_title"
			android:defaultValue="false" />
		<com.htc.preference.HtcCheckBoxPreference
			android:key="pref_key_other_movevol"
			android:summary="@string/various_movevol_summ"
			android:title="@string/various_movevol_title"
			android:defaultValue="false" />
		</com.htc.preference.HtcPreferenceCategory>
		
		<com.htc.preference.HtcPreferenceCategory
			android:title="@string/various_mods_screenanim" >
			<com.htc.preference.HtcListPreference
				android:key="pref_key_other_screenon"
				android:summary="@string/various_screenon_summ"
				android:title="@string/various_screenon_title"
				android:entries="@array/various_screenon"
				android:entryValues="@array/various_screenon_val"
				android:defaultValue="0" />
			<com.htc.preference.HtcListPreference
				android:key="pref_key_other_screenoff"
				android:summary="@string/various_screenoff_summ"
				android:title="@string/various_screenoff_title"
				android:entries="@array/various_screenoff"
				android:entryValues="@array/various_screenoff_val"
				android:defaultValue="0" />
			<com.sensetoolbox.six.utils.SeekBarPreference
				android:key="pref_key_other_screenanim_duration"
				android:title="@string/various_screenanim_duration_title"
				android:summary="@string/various_screenanim_duration_summ"
				toolbox:dialogEnableMessage="@string/seekbar_mod_enable"
				android:dialogMessage="@string/various_screenanim_desc"
				android:defaultValue="250"
				android:text=" ms"
				android:max="1000"
				toolbox:animPref="true"
				toolbox:enableKey="pref_key_other_screenanim_duration_enable"/>
		</com.htc.preference.HtcPreferenceCategory>
</com.htc.preference.HtcPreferenceScreen>